Add in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
-/1.10.1/xdrv/xfdrv.*
+/1.10.1/xdrv/xfdrv.vpj
+/1.10.1/xdrv/xfdrv.vpw
+/1.10.1/xdrv/xfdrv.vpwhistu
+/1.10.1/xdrv/xfdrv.vtg
+/1.10.1/xdrv/*.o
+
+
