These changes fix the Par 500 POS terminal and allow it to run on 64-bit Ubuntu 18.04.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,5 @@
-/1.10.1/xdrv/xfdrv.vpj
-/1.10.1/xdrv/xfdrv.vpw
-/1.10.1/xdrv/xfdrv.vpwhistu
-/1.10.1/xdrv/xfdrv.vtg
-/1.10.1/xdrv/*.o
-
-
+**/*.vpj
+**/*.vpw
+**/*.vpwhistu
+**/*.vtg
+**/*.o
