--- a/1.10.1/xdrv/src/Makefile
+++ b/1.10.1/xdrv/src/Makefile
@@ -35,8 +35,8 @@ POST_INSTALL = :
 NORMAL_UNINSTALL = :
 PRE_UNINSTALL = :
 POST_UNINSTALL = :
-build_triplet = i686-pc-linux-gnu
-host_triplet = i686-pc-linux-gnu
+build_triplet = x86_64-unknown-linux-gnu
+host_triplet = x86_64-unknown-linux-gnu
 subdir = src
 DIST_COMMON = $(srcdir)/Makefile.am $(srcdir)/Makefile.in
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
@@ -58,14 +58,14 @@ am__installdirs = "$(DESTDIR)$(x86moduledir)"
 x86moduleDATA_INSTALL = $(INSTALL_DATA)
 DATA = $(x86module_DATA)
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
-ACLOCAL = ${SHELL} /opt/v1.0.0.8/v1.0.0.8/Xorg/1.10.1/xdrv/missing --run aclocal-1.9
+ACLOCAL = ${SHELL} /home/aland/src/par/v1.0.0.8/Xorg/1.10.1/xdrv/missing --run aclocal-1.9
 AMDEP_FALSE = #
 AMDEP_TRUE = 
-AMTAR = ${SHELL} /opt/v1.0.0.8/v1.0.0.8/Xorg/1.10.1/xdrv/missing --run tar
+AMTAR = ${SHELL} /home/aland/src/par/v1.0.0.8/Xorg/1.10.1/xdrv/missing --run tar
 AR = ar
-AUTOCONF = ${SHELL} /opt/v1.0.0.8/v1.0.0.8/Xorg/1.10.1/xdrv/missing --run autoconf
-AUTOHEADER = ${SHELL} /opt/v1.0.0.8/v1.0.0.8/Xorg/1.10.1/xdrv/missing --run autoheader
-AUTOMAKE = ${SHELL} /opt/v1.0.0.8/v1.0.0.8/Xorg/1.10.1/xdrv/missing --run automake-1.9
+AUTOCONF = ${SHELL} /home/aland/src/par/v1.0.0.8/Xorg/1.10.1/xdrv/missing --run autoconf
+AUTOHEADER = ${SHELL} /home/aland/src/par/v1.0.0.8/Xorg/1.10.1/xdrv/missing --run autoheader
+AUTOMAKE = ${SHELL} /home/aland/src/par/v1.0.0.8/Xorg/1.10.1/xdrv/missing --run automake-1.9
 AWK = gawk
 CC = gcc
 CCDEPMODE = depmode=gcc3
@@ -101,7 +101,7 @@ LTLIBOBJS =
 MAINT = #
 MAINTAINER_MODE_FALSE = 
 MAINTAINER_MODE_TRUE = #
-MAKEINFO = ${SHELL} /opt/v1.0.0.8/v1.0.0.8/Xorg/1.10.1/xdrv/missing --run makeinfo
+MAKEINFO = ${SHELL} /home/aland/src/par/v1.0.0.8/Xorg/1.10.1/xdrv/missing --run makeinfo
 OBJEXT = o
 PACKAGE = linuxwacom
 PACKAGE_BUGREPORT = 
@@ -113,13 +113,13 @@ PATH_SEPARATOR = :
 PKG_CONFIG = /usr/bin/pkg-config
 RANLIB = ranlib
 SET_MAKE = 
-SHELL = /bin/bash
+SHELL = /bin/sh
 STRIP = strip
 TCLSH = /usr/bin/tclsh
 VERSION = 0.7.9
 WACOMXI_INSTALL_FALSE = 
 WACOMXI_INSTALL_TRUE = #
-WCM_ARCH = i686
+WCM_ARCH = x86_64
 WCM_CLEVEL = -std=c99
 WCM_DEPFLAGS = 
 WCM_DLLOADER_FALSE = #
@@ -130,7 +130,7 @@ WCM_ENV_XFREE86_FALSE =
 WCM_ENV_XFREE86_TRUE = #
 WCM_ENV_XORGSDK_FALSE = #
 WCM_ENV_XORGSDK_TRUE = 
-WCM_KERNEL_DIR = /lib/modules/3.13.0-83-generic/build
+WCM_KERNEL_DIR = /lib/modules/4.15.0-65-generic/build
 WCM_KERNEL_VER = 
 WCM_KSTACK = 
 WCM_LIBS = 
@@ -159,8 +159,8 @@ WCM_XORGSDK_DIR = /usr/include/xorg
 WCM_XSERVER64 = 
 WCM_XSETWACOM_LIBS = 
 XMKMF = 
-XSERVER_CFLAGS = -pthread -fvisibility=hidden -I/usr/include/pixman-1 -I/usr/include/mirclient -I/usr/include/libdrm -I/usr/include/mircommon -I/usr/include/xorg -I/usr/include/X11/dri  
-XSERVER_LIBS =  
+XSERVER_CFLAGS = -fvisibility=hidden -I/usr/include/xorg -I/usr/include/pixman-1 -I/usr/include/libdrm -I/usr/include/X11/dri
+XSERVER_LIBS = 
 X_CFLAGS = 
 X_EXTRA_LIBS = 
 X_LIBS = 
@@ -180,25 +180,25 @@ am__quote =
 am__tar = ${AMTAR} chof - "$$tardir"
 am__untar = ${AMTAR} xf -
 bindir = ${exec_prefix}/bin
-build = i686-pc-linux-gnu
+build = x86_64-unknown-linux-gnu
 build_alias = 
-build_cpu = i686
+build_cpu = x86_64
 build_os = linux-gnu
-build_vendor = pc
+build_vendor = unknown
 datadir = ${datarootdir}
 datarootdir = ${prefix}/share
 docdir = ${datarootdir}/doc/${PACKAGE_TARNAME}
 dvidir = ${docdir}
 exec_prefix = ${prefix}
-host = i686-pc-linux-gnu
+host = x86_64-unknown-linux-gnu
 host_alias = 
-host_cpu = i686
+host_cpu = x86_64
 host_os = linux-gnu
-host_vendor = pc
+host_vendor = unknown
 htmldir = ${docdir}
-includedir = ${prefix}/include
+includedir = /usr/include/pixman-1
 infodir = ${datarootdir}/info
-install_sh = /opt/v1.0.0.8/v1.0.0.8/Xorg/1.10.1/xdrv/install-sh
+install_sh = /home/aland/src/par/v1.0.0.8/Xorg/1.10.1/xdrv/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
