These changes fix the Xorg bug where the file descriptor for the touchscreen input drivers gets closed but the input driver doesn't get notified when the focus comes back to the Xorg terminal.
I asked Peter Hutterer to file a bug so this will be fixed, but
in the meantime this seems to work. I have basically neutered the
input driver by not closing the file descriptor on both DEVICE_OFF
and DEVICE_CLOSE. I'm not sure what ramifications this could have
in different scenarios, but hopefully this will allow Yum to work
with the current driver on 18.04.2 of their backoffice image.

--- a/1.10.1/xdrv/Makefile
+++ b/1.10.1/xdrv/Makefile
@@ -33,8 +33,8 @@ POST_INSTALL = :
 NORMAL_UNINSTALL = :
 PRE_UNINSTALL = :
 POST_UNINSTALL = :
-build_triplet = x86_64-unknown-linux-gnu
-host_triplet = x86_64-unknown-linux-gnu
+build_triplet = i686-pc-linux-gnu
+host_triplet = i686-pc-linux-gnu
 DIST_COMMON = README $(am__configure_deps) $(srcdir)/Makefile.am \
 	$(srcdir)/Makefile.in $(srcdir)/mkxincludes.in \
 	$(top_srcdir)/configure AUTHORS COPYING ChangeLog INSTALL NEWS \
@@ -70,14 +70,14 @@ DIST_ARCHIVES = $(distdir).tar.gz
 GZIP_ENV = --best
 distuninstallcheck_listfiles = find . -type f -print
 distcleancheck_listfiles = find . -type f -print
-ACLOCAL = ${SHELL} /home/aland/src/par/v1.0.0.8/Xorg/1.10.1/xdrv/missing --run aclocal-1.9
+ACLOCAL = ${SHELL} /opt/v1.0.0.8/v1.0.0.8/Xorg/1.10.1/xdrv/missing --run aclocal-1.9
 AMDEP_FALSE = #
 AMDEP_TRUE = 
-AMTAR = ${SHELL} /home/aland/src/par/v1.0.0.8/Xorg/1.10.1/xdrv/missing --run tar
+AMTAR = ${SHELL} /opt/v1.0.0.8/v1.0.0.8/Xorg/1.10.1/xdrv/missing --run tar
 AR = ar
-AUTOCONF = ${SHELL} /home/aland/src/par/v1.0.0.8/Xorg/1.10.1/xdrv/missing --run autoconf
-AUTOHEADER = ${SHELL} /home/aland/src/par/v1.0.0.8/Xorg/1.10.1/xdrv/missing --run autoheader
-AUTOMAKE = ${SHELL} /home/aland/src/par/v1.0.0.8/Xorg/1.10.1/xdrv/missing --run automake-1.9
+AUTOCONF = ${SHELL} /opt/v1.0.0.8/v1.0.0.8/Xorg/1.10.1/xdrv/missing --run autoconf
+AUTOHEADER = ${SHELL} /opt/v1.0.0.8/v1.0.0.8/Xorg/1.10.1/xdrv/missing --run autoheader
+AUTOMAKE = ${SHELL} /opt/v1.0.0.8/v1.0.0.8/Xorg/1.10.1/xdrv/missing --run automake-1.9
 AWK = gawk
 CC = gcc
 CCDEPMODE = depmode=gcc3
@@ -113,7 +113,7 @@ LTLIBOBJS =
 MAINT = #
 MAINTAINER_MODE_FALSE = 
 MAINTAINER_MODE_TRUE = #
-MAKEINFO = ${SHELL} /home/aland/src/par/v1.0.0.8/Xorg/1.10.1/xdrv/missing --run makeinfo
+MAKEINFO = ${SHELL} /opt/v1.0.0.8/v1.0.0.8/Xorg/1.10.1/xdrv/missing --run makeinfo
 OBJEXT = o
 PACKAGE = linuxwacom
 PACKAGE_BUGREPORT = 
@@ -125,13 +125,13 @@ PATH_SEPARATOR = :
 PKG_CONFIG = /usr/bin/pkg-config
 RANLIB = ranlib
 SET_MAKE = 
-SHELL = /bin/sh
+SHELL = /bin/bash
 STRIP = strip
 TCLSH = /usr/bin/tclsh
 VERSION = 0.7.9
 WACOMXI_INSTALL_FALSE = 
 WACOMXI_INSTALL_TRUE = #
-WCM_ARCH = x86_64
+WCM_ARCH = i686
 WCM_CLEVEL = -std=c99
 WCM_DEPFLAGS = 
 WCM_DLLOADER_FALSE = #
@@ -142,7 +142,7 @@ WCM_ENV_XFREE86_FALSE =
 WCM_ENV_XFREE86_TRUE = #
 WCM_ENV_XORGSDK_FALSE = #
 WCM_ENV_XORGSDK_TRUE = 
-WCM_KERNEL_DIR = /lib/modules/4.15.0-65-generic/build
+WCM_KERNEL_DIR = /lib/modules/3.13.0-83-generic/build
 WCM_KERNEL_VER = 
 WCM_KSTACK = 
 WCM_LIBS = 
@@ -171,8 +171,8 @@ WCM_XORGSDK_DIR = /usr/include/xorg
 WCM_XSERVER64 = 
 WCM_XSETWACOM_LIBS = 
 XMKMF = 
-XSERVER_CFLAGS = -fvisibility=hidden -I/usr/include/xorg -I/usr/include/pixman-1 -I/usr/include/libdrm -I/usr/include/X11/dri
-XSERVER_LIBS = 
+XSERVER_CFLAGS = -pthread -fvisibility=hidden -I/usr/include/pixman-1 -I/usr/include/mirclient -I/usr/include/libdrm -I/usr/include/mircommon -I/usr/include/xorg -I/usr/include/X11/dri  
+XSERVER_LIBS =  
 X_CFLAGS = 
 X_EXTRA_LIBS = 
 X_LIBS = 
@@ -192,25 +192,25 @@ am__quote =
 am__tar = ${AMTAR} chof - "$$tardir"
 am__untar = ${AMTAR} xf -
 bindir = ${exec_prefix}/bin
-build = x86_64-unknown-linux-gnu
+build = i686-pc-linux-gnu
 build_alias = 
-build_cpu = x86_64
+build_cpu = i686
 build_os = linux-gnu
-build_vendor = unknown
+build_vendor = pc
 datadir = ${datarootdir}
 datarootdir = ${prefix}/share
 docdir = ${datarootdir}/doc/${PACKAGE_TARNAME}
 dvidir = ${docdir}
 exec_prefix = ${prefix}
-host = x86_64-unknown-linux-gnu
+host = i686-pc-linux-gnu
 host_alias = 
-host_cpu = x86_64
+host_cpu = i686
 host_os = linux-gnu
-host_vendor = unknown
+host_vendor = pc
 htmldir = ${docdir}
-includedir = /usr/include/pixman-1
+includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = /home/aland/src/par/v1.0.0.8/Xorg/1.10.1/xdrv/install-sh
+install_sh = /opt/v1.0.0.8/v1.0.0.8/Xorg/1.10.1/xdrv/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
